# Menthol

./: .gitignore  AGENTS.md  Cargo.toml  LOGIN_FLOW.md  SEARCH_SYSTEM.md  justfile  shell.nix
crates/slsk-core/: Cargo.toml
crates/slsk-core/src/: command.rs  config.rs  error.rs  event.rs  lib.rs
crates/slsk-core/src/io/: bandwidth.rs  disk_reader.rs  disk_writer.rs  mod.rs  reader.rs  writer.rs
crates/slsk-core/src/network/: framing.rs  mod.rs  peer.rs  server.rs  socket.rs  state.rs
crates/slsk-core/src/search/: mod.rs  sanitize.rs  search.rs  word_index.rs
crates/slsk-core/src/transfer/: incomplete.rs  mod.rs  retry.rs  upload.rs
crates/slsk-gui/: Cargo.toml
crates/slsk-gui/src/: login.rs  main.rs  main_window.rs  profiles.rs
crates/slsk-gui/src/panels/: browse_panel.rs  downloads_panel.rs  messages_panel.rs  mod.rs  rooms_panel.rs  search_panel.rs  settings_panel.rs  uploads_panel.rs
crates/slsk-mock/: Cargo.toml
crates/slsk-mock/src/: main.rs
crates/slsk-proto/: Cargo.toml
crates/slsk-proto/src/: codec.rs  distributed.rs  error.rs  file.rs  lib.rs  peer.rs  peer_init.rs  server.rs  types.rs
crates/slsk-proto/src/peer/: file_search_response.rs  folder_contents.rs  place_in_queue.rs  place_in_queue_request.rs  queue_upload.rs  shared_file_list.rs  transfer_request.rs  transfer_response.rs  upload_denied.rs  upload_failed.rs  user_info.rs
crates/slsk-proto/src/peer_init/: peer_init.rs  pierce_firewall.rs  req.rs
crates/slsk-proto/src/server/: accept_children.rs  add_room_member.rs  add_thing_i_like.rs  admin_message.rs  branch_level.rs  (+47 more)
