[package]
name = "slsk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
slsk-proto = { path = "../slsk-proto" }
tokio      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
bytes      = { workspace = true }
md5        = { workspace = true }
socket2    = "0.5"
libc       = "0.2"
